After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750961 - mpegtsmux: fix build error
mpegtsmux: fix build error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal major
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-15 01:34 UTC by Vineeth
Modified: 2015-06-15 14:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix build error (1016 bytes, patch)
2015-06-15 01:35 UTC, Vineeth
none Details | Review
fix build error (1.01 KB, patch)
2015-06-15 02:44 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-06-15 01:34:50 UTC
after e000a6f0a4984fbe81190df6cd439c70dafde3d6, there is build error in bad plugins this happens because, GST_CLOCK_STIME_IS_VALID () is being checked for pad_data but it expects a GstClockTime parameter. Changing the check to 'dts'
Comment 1 Vineeth 2015-06-15 01:35:28 UTC
Created attachment 305263 [details] [review]
fix build error
Comment 2 Vineeth 2015-06-15 02:44:04 UTC
Created attachment 305266 [details] [review]
fix build error
Comment 3 Sebastian Dröge (slomo) 2015-06-15 08:14:21 UTC
commit 95dd8d9662c7060843021d64e85c4295bd1578e9
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Mon Jun 15 10:34:56 2015 +0900

    mpegtsmux: fix build error
    
    after e000a6f0a4984fbe81190df6cd439c70dafde3d6, there is build error in bad plugins
    this happens because, GST_CLOCK_STIME_IS_VALID () is being checked for pad_data
    but it expects a GstClockTime parameter. Changing the check to 'dts'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750961
Comment 4 Nicolas Dufresne (ndufresne) 2015-06-15 14:37:51 UTC
For the record, I completly removed min_dts, it's not needed anymore. I also fixed the trace (it was tracing time instead of DTS, and found a bug in the trace macro).